[package]
name = "minipp_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4.23"
swc_ecma_ast = "12.0.0"
swc_ecma_parser = "15.0.2"
swc_common = { version = "12.0.1", features = ["tty-emitter"] }
swc_ecma_visit = "12.0.0"
glob = "0.3.2"